fixed logo spacing

--- a/qtify/src/components/Logo/Logo.module.css
+++ b/qtify/src/components/Logo/Logo.module.css
@@ -1,8 +1,16 @@
-.logo{
+/* .logo{
 width: 4vw;
 /* height: 50%; */
-top: 30px;
+/* top: 30px;
 bottom: 30px;
-left: 39px;
+left: 39px; */
+/* } */ 
+
+.logo{
+width: 67px;
+height: 34px;
+top: 20px;
+bottom: 20px;
+left: 32px;
 
 }
